fix border-left jump on active selection

--- a/resources/assets/sass/pages/invoices/view.scss
+++ b/resources/assets/sass/pages/invoices/view.scss
@@ -22,15 +22,21 @@
     }
 
     .side-invoice {
+        cursor: pointer;
         padding: 12px 16px;
         display: flex;
         justify-content: space-between;
         border-bottom: 1px solid rgba(185, 193, 209, 0.41);
-        cursor: pointer;
+        border-left: 3px solid transparent;
 
         &:last-child {
             margin-bottom: 98px;
         }
+
+        &.router-link-exact-active {
+           border-left: 3px solid $ls-color-primary;
+           background-color: $ls-color-gray--very-light;
+       }
 
         &:hover {
             background-color: $ls-color-gray--very-light;
